# ZMNNDemo

./: .gitignore  settings.gradle  signature.gradle
MnnModule/: build.gradle
MnnModule/src/main/: AndroidManifest.xml
MnnModule/src/main/cpp/: CMakeLists.txt  MyUtil.cpp  MyUtil.h  ProcessJni.cpp  kaldifeature.cpp
MnnModule/src/main/cpp/include/feat/: feature-fbank.h  feature-window.h  wave-reader.h
MnnModule/src/main/java/com/lionel/zc/feature/: JMatrix.kt  NativeLib.kt
MnnModule/src/main/java/com/lionel/zc/mnn/: MNNForwardType.java  MNNImageProcess.java  MNNNetInstance.java  MNNNetNative.java  MNNPortraitNative.java  TextProcess.java
app/: build.gradle
app/src/androidTest/java/com/linoel/example/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/linoel/example/app/: MainActivity.kt
app/src/main/java/com/linoel/example/app/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: themes.xml
app/src/test/java/com/linoel/example/app/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
kaldiFeature/: build.gradle
kaldiFeature/src/androidTest/java/com/lionel/zc/kaldifeature/: ExampleInstrumentedTest.kt
kaldiFeature/src/main/cpp/: CMakeLists.txt  kaldifeature.cc
kaldiFeature/src/main/cpp/include/: feat-computer.h  openblas_config.h
kaldiFeature/src/main/cpp/include/matrix/: kaldi-vector.h
kaldiFeature/src/main/java/com/asr/feat/: ComputeFeat.java
kaldiFeature/src/main/java/com/lionel/zc/kaldifeature/: NativeLib.kt
kaldiFeature/src/test/java/com/lionel/zc/kaldifeature/: ExampleUnitTest.kt
